fix css layout issue

--- a/frontend/workout/src/styles.scss
+++ b/frontend/workout/src/styles.scss
@@ -37,9 +37,9 @@ header a {
 
 /* homepage */
 .home {
-  display: grid;
-  grid-template-columns: 3fr 1fr;
-  gap: 100px;
+  // display: grid;
+  // grid-template-columns: 3fr 1fr;
+  // gap: 100px;
 }
 .workout-details {
   background: #fff;
